# dotplate

./: README.rst  dotplate.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: test.yml
dotplate/: config.py
src/dotplate/: __init__.py  __main__.py  config.py  dotplate.py  errors.py  jinja_ext.py  prompt.py  util.py
test/: conftest.py  test_cli.py  test_diff.py  test_dotplate.py  test_end2end.py  test_util.py
test/data/cases/custom-brackets/src/: .profile
test/data/cases/multisuite/dest/: base.txt  foo.txt
test/data/cases/multisuite/dest-bar/: foobar.txt
test/data/cases/multisuite/dest-foobar/: foobar.txt
test/data/cases/multisuite/src/: dotplate.toml  foobar.txt
test/data/cases/script/src/: dotplate.toml
test/data/cases/shell-quote/: which-mock.json
test/data/cases/shell-quote/dest/: .profile
test/data/cases/shell-quote/src/: .profile  dotplate.toml
test/data/cases/simple/dest/: .profile
test/data/cases/suite-enabled/src/: dotplate.toml
test/data/cases/suited/src/: dotplate.toml
test/data/cases/which/: which-mock.json
test/data/cases/which/src/: .profile
test/data/end2end/simple/src/: dotplate.toml
test/data/examples/custom-brackets/dest/: .profile
test/data/examples/custom-brackets/src/: dotplate.toml
test/data/examples/next-to-src/src/: dotplate.toml
test/data/examples/next-to-src/src/templates/: .profile
test/data/examples/simple/src/: dotplate.toml
