[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotplate"
dynamic = ["version"]
description = "Yet another dotfile manager/templater"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "dotplate@varonathe.org" }
]

keywords = [
    ###
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    ###
    "Typing :: Typed",
]

dependencies = [
    "click >= 8.0",
    "iterpath ~= 0.4.1",
    "jinja2 ~= 3.1",
    "linesep ~= 0.5",
    "pydantic ~= 2.0",
    "tomli >= 1.2, < 3.0; python_version < '3.11'",
]

[project.urls]
"Source Code" = "https://github.com/jwodder/dotplate"
"Bug Tracker" = "https://github.com/jwodder/dotplate/issues"
"Documentation" = "https://dotplate.readthedocs.io"

[tool.hatch.version]
path = "src/dotplate/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
